# sistema-fila

./: README.md
sistema-fila/: Cargo.toml  docker-compose.yml  dockerfile
sistema-fila/ingestao-massiva/: Cargo.toml  dockerfile  load_test.js
sistema-fila/ingestao-massiva/src/: main.rs  models.rs  routes.rs  tests.rs  worker.rs
